Start sharing work
ga4gh/dockstore#1384
