# dockstore-webservice/src/main/resources/swagger.yaml
@@ -1245,7 +1245,7 @@ paths:
         schema:
           type: "array"
           items:
-            $ref: "#/definitions/SourceFile"
+            type: "object"
       responses:
         200:
           description: "successful operation"
@@ -3257,7 +3257,7 @@ paths:
         schema:
           type: "array"
           items:
-            $ref: "#/definitions/SourceFile"
+            type: "object"
       responses:
         200:
           description: "successful operation"
@@ -3400,6 +3400,63 @@ paths:
             $ref: "#/definitions/Workflow"
       security:
       - BEARER: []
+  /workflows/path/workflow/{repository}/actions:
+    get:
+      tags:
+      - "workflows"
+      summary: "Determine if user can perform an action on a workflow"
+      description: ""
+      operationId: "canPerformAction"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "repository"
+        in: "path"
+        description: "repository path"
+        required: true
+        type: "string"
+      - name: "action"
+        in: "query"
+        description: "action"
+        required: true
+        type: "string"
+        enum:
+        - "WRITE"
+        - "READ"
+        - "DELETE"
+        - "SHARE"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "boolean"
+      security:
+      - BEARER: []
+  /workflows/path/workflow/{repository}/permissions:
+    get:
+      tags:
+      - "workflows"
+      summary: "Get all permissions for a workflow"
+      description: "Lists all permissions for a workflow. The user must be the workflow\
+        \ owner."
+      operationId: "getWorkflowPermissions"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "repository"
+        in: "path"
+        description: "repository path"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Permission"
+      security:
+      - BEARER: []
   /workflows/path/workflow/{repository}/published:
     get:
       tags:
@@ -3420,6 +3477,75 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Workflow"
+  /workflows/path/workfow/{repository}/permissions:
+    delete:
+      tags:
+      - "workflows"
+      summary: "Remove the specified user role for a workflow"
+      description: "Removes a role from a workflow. The user must be the workflow\
+        \ owner."
+      operationId: "removeWorkflowRole"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "repository"
+        in: "path"
+        description: "repository path"
+        required: true
+        type: "string"
+      - name: "email"
+        in: "query"
+        description: "user email"
+        required: true
+        type: "string"
+      - name: "role"
+        in: "query"
+        description: "role"
+        required: true
+        type: "string"
+        enum:
+        - "OWNER"
+        - "WRITER"
+        - "READER"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Permission"
+      security:
+      - BEARER: []
+    patch:
+      tags:
+      - "workflows"
+      summary: "Set the specified permission for a user on a workflow"
+      description: "Adds a permission for a workflow. The user must be the workflow\
+        \ owner."
+      operationId: "addWorkflowPermission"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "repository"
+        in: "path"
+        description: "repository path"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "user permission"
+        required: true
+        schema:
+          $ref: "#/definitions/Permission"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Permission"
+      security:
+      - BEARER: []
   /workflows/path/{repository}:
     get:
       tags:
@@ -3503,6 +3629,25 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Workflow"
+  /workflows/shared:
+    get:
+      tags:
+      - "workflows"
+      summary: "All workflows shared with user"
+      description: "List all workflows shared with user"
+      operationId: "sharedWorkflows"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Workflow"
+      security:
+      - BEARER: []
   /workflows/{entryId}/registerCheckerWorkflow/{descriptorType}:
     post:
       tags:
@@ -4819,6 +4964,17 @@ definitions:
       friendly-name:
         type: "string"
     description: "Describes this registry to better allow for mirroring and indexing."
+  Permission:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      role:
+        type: "string"
+        enum:
+        - "OWNER"
+        - "WRITER"
+        - "READER"
   PublishRequest:
     type: "object"
     properties:
